[gd_scene load_steps=6 format=3 uid="uid://dbf5a5xch38l7"]

[ext_resource type="Script" uid="uid://segbp6rkd2dd" path="res://scenes/Player.gd" id="1_xhfnw"]
[ext_resource type="PackedScene" uid="uid://cqy5ly4tohk6l" path="res://scenes/Crab.tscn" id="2_3li8b"]
[ext_resource type="PackedScene" uid="uid://div5xhfmjnms4" path="res://scenes/Bucket.glb" id="2_kpjcp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0rwas"]
height = 1.5159302

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kpjcp"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:scale")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Body:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:color")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["Players"]]
script = ExtResource("1_xhfnw")
metadata/spawn_path = NodePath("")

[node name="Crab" parent="." instance=ExtResource("2_3li8b")]

[node name="Bucket" parent="Crab" instance=ExtResource("2_kpjcp")]
physics_interpolation_mode = 2
transform = Transform3D(-1.4720832, 0, -2.0637848, 0, 2.535, 0, 2.0637848, 0, -1.4720832, -0.6061386, 0.49955285, 0.079963595)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -0.18235609, 0.57347023, -0.19144338)
shape = SubResource("CapsuleShape3D_0rwas")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kpjcp")

[node name="CollectArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.41355598)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="CollectArea"]
transform = Transform3D(-5.2453668e-08, -1.2, 0, 1.2, -5.2453668e-08, 0, 0, 0, 1.2, -0.18235609, 0.57347023, -0.60499936)
shape = SubResource("CapsuleShape3D_0rwas")

[connection signal="body_entered" from="CollectArea" to="." method="_on_area_3d_body_entered"]
